Bug 495391 - HMTL 5 Permissions like "Grant/Deny access to microphone and/or camera" cannot be applied to any web site
Summary: HMTL 5 Permissions like "Grant/Deny access to microphone and/or camera" canno...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Juraj
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-26 16:06 UTC by Jens Radloff
Modified: 2024-12-14 14:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jens Radloff 2024-10-26 16:06:50 UTC
I noticed the following behavior in my self-compiled Falkon installation (version 24.08.2 under Tuxedo OS 3):

1. Open any web site in Falkon

2. Edit menu > Preferences > "HTML5 Permissions" tab > click the "Browse" button behind any option listed on the "HTML5 Permissions" tab > click one of the buttons "Ask" | "Allow" | "Deny"

Result: It is not possible to enter any URL here, and the URL of the web site currently opened in Falkon in the background is not displayed here to get selected, too.

Thus, you are not able to grant or revoke the access rights listed on the "HTML5 Permissions" tab to/from a specific URL.

Falkon 24.08.2 - Configuration Information:

Application version: 24.08.2 (6d85f0b55)
Linux/KDE Plasma: 6.1.5
Qt version: 6.7.2
KDE Framework Integration (kf6-frameworkintegration): 6.6.0
QtWebEngine version: 6.7.2
Platform: Linux x86_64
Browser Identification: Mozilla/5.0 (Wayland; Linux x86_64; rv:102.0) Gecko/20100101 Firefox/102.0
Display server: Wayland

Build Configuration:

Debug build: Enabled
Portable build: Disabled
Comment 1 Juraj 2024-10-26 16:33:53 UTC
Hello Jens,

the dialog in preferences is only for modifying existing records.

To add new records the pages "Site Info > Permissions" should be used.

I plan to add the functionality to add new records into preferences dialog as well, but it is a bit more precise than just writing random url there. So it was left out from the initial release.

Thank you for testing and your suggestion.

Best regards,
Juraj
Comment 2 Bug Janitor Service 2024-12-02 09:23:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/98
Comment 3 Juraj 2024-12-14 14:40:31 UTC
Git commit 6dc4b6d47be3de3cdd4f4d569c5d819c0c38c19b by Juraj Oravec.
Committed on 14/12/2024 at 14:33.
Pushed by jurajo into branch 'master'.

Add option to add site permissions in preferences

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +53   -2    src/lib/preferences/sitesettingsbrowsedialog.cpp
M  +6    -0    src/lib/preferences/sitesettingsbrowsedialog.h
M  +57   -13   src/lib/preferences/sitesettingsbrowsedialog.ui

https://invent.kde.org/network/falkon/-/commit/6dc4b6d47be3de3cdd4f4d569c5d819c0c38c19b