Add option to add site permissions in preferences

BUG: 495391

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>